--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -30,6 +30,7 @@
   overflow: hidden;
   /* background-color: rgba(252, 252, 252, 0.95); */
   background-color: rgba(252, 252, 252, 0.95);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 10px 20px rgba(0, 0, 0, 0.08);
 }
 
 .userInfo__desc {
@@ -75,4 +76,22 @@
 }
 .too {
   display: flex;
+}
+.btn {
+  padding-top: 8px;
+  padding-right: 2px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+}
+.btnSelf {
+  border: none;
+  padding: 2px 2px;
+  gap: 4px;
+  width: 60px;
+  height: 20px;
+  border-radius: 32px;
+  font-size: 10px;
+}
+.dagagch {
+  font-size: 12px;
 }
